--- a/projetossimilares/src/App.css
+++ b/projetossimilares/src/App.css
@@ -79,6 +79,12 @@ form button:hover {
   border: 2px solid #bbb0bb;
 }
 
+form button:disabled{
+  background-color: #531e5e;
+  color: red;
+  border: 2px solid #bbb0bb;
+}
+
 @media(max-width: 650px){
   .App {
     flex-direction: column;
